<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.empresa_xyz.Principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/sexo"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/cmbsexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/tipozapato"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/cmbtipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/zapatos"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/cmbmarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/cantidad"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtcantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="total"
                android:text="@string/total" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar"
                android:text="@string/borrar" />
        </LinearLayout>

        <TextView
            android:id="@+id/txsubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:padding="2dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:padding="2dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
